--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body>
   <div class="img-container">
     <img src="./eisenhower-matrix.jpg" class="img-container__img">
@@ -13,10 +15,10 @@
   <div class="main">
     <p id="add-section" class="main__add-section">
       <label for="new-task" class="main__label">Add Item</label>
-      <div class="main-row">
-        <input id="new-task" class="main-imput" type="text">
-        <button class="main__btn-add">Add</button>
-      </div>
+    <div class="main-row">
+      <input id="new-task" class="main-input" type="text">
+      <button class="main__btn main__btn-add">Add</button>
+    </div>
     </p>
     <h3 class="main__head">Todo</h3>
     <ul id="task-incomplete" class="main__list">
@@ -24,8 +26,8 @@
         <input type="checkbox" class="main__checkbox">
         <label class="main__label-task">Pay Bills</label>
         <input type="text" class="main__input-task">
-        <button class="main__btn-edit">Edit</button>
-        <button class="main__btn-delete">
+        <button class="main__btn main__btn-edit">Edit</button>
+        <button class="main__btn main__btn-delete">
           <img src="./remove.svg" class="main__icon-delete">
         </button>
       </li>
@@ -33,8 +35,8 @@
         <input type="checkbox" class="main__checkbox">
         <label class="main__label-task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="main__input-task">
-        <button class="main__btn-save">Save</button>
-        <button class="main__btn-delete">
+        <button class="main__btn main__btn-edit">Save</button>
+        <button class="main__btn main__btn-delete">
           <img src="./remove.svg" class="main__icon-delete">
         </button>
       </li>
@@ -45,8 +47,8 @@
         <input type="checkbox" checked class="main__checkbox">
         <label class="main__label-task">See the Doctor</label>
         <input type="text" class="main__input-task">
-        <button class="main__btn-edit">Edit</button>
-        <button class="main__btn-delete">
+        <button class="main__btn main__btn-edit">Edit</button>
+        <button class="main__btn main__btn-delete">
           <img src="./remove.svg" class="main__icon-delete">
         </button>
       </li>
@@ -54,4 +56,5 @@
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
+
 </html>
