fix(advanced-1.2): add media alternatives

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="img-container">
-      <img src="./eisenhower-matrix.jpg" class="img-container__img">
+      <img src="./eisenhower-matrix.jpg" class="img-container__img" alt="Eisenhower Matrix">
       <a class="img-container__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
   </header>
@@ -31,7 +31,7 @@
           <input type="text" class="main__input-task">
           <button class="main__btn main__btn-edit">Edit</button>
           <button class="main__btn main__btn-delete">
-            <img src="./remove.svg" class="main__icon-delete">
+            <img src="./remove.svg" class="main__icon-delete" alt="Delete">
           </button>
         </li>
         <li class="main__item main__item--edit">
@@ -40,7 +40,7 @@
           <input type="text" value="Go Shopping" class="main__input-task">
           <button class="main__btn main__btn-edit">Save</button>
           <button class="main__btn main__btn-delete">
-            <img src="./remove.svg" class="main__icon-delete">
+            <img src="./remove.svg" class="main__icon-delete" alt="Delete">
           </button>
         </li>
       </ul>
@@ -54,7 +54,7 @@
           <input type="text" class="main__input-task">
           <button class="main__btn main__btn-edit">Edit</button>
           <button class="main__btn main__btn-delete">
-            <img src="./remove.svg" class="main__icon-delete">
+            <img src="./remove.svg" class="main__icon-delete" alt="Delete">
           </button>
         </li>
       </ul>
